# onshape_mjcf

./: .gitignore  README.md  pyproject.toml
onshape_mjcf/: __init__.py  robot_description.py  to_mjcf_basic.py
onshape_mjcf/mjcf/: __init__.py  builder.py  template.py
onshape_mjcf/onshape_api/: client.py  onshape.py
onshape_mjcf/onshape_data/: __init__.py  inertial.py  joint.py  primitive_geom.py  topology.py
onshape_mjcf/util/: __init__.py  inertial.py  test_inertial.py
